kubernetes/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: cfahrni/rancher-demo
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
