kubernetes/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
spec:
  selector:
    app: demoapp
  ports:
  - port: 8080
    targetPort: 8080
