kubernetes/demo-app/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: demoapp
spec:
  rules:
    - host: demoapp.<myip>.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demoapp
              port:
                number: 8080
